--- a/.github/workflows/update-packagejson.yaml
+++ b/.github/workflows/update-packagejson.yaml
@@ -122,7 +122,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -m "feat: Update package.json && CHANGELOG.md to ${{ env.GIT_TAG }}" -a
+          git commit -m "Release ${{ env.GIT_TAG }}" -a
           echo "sha=$(git rev-parse HEAD)" | tee -a "$GITHUB_OUTPUT"
 
       - name: Check sha
